--- a/frontend/src/main/resources/static/user/group_overview.css
+++ b/frontend/src/main/resources/static/user/group_overview.css
@@ -602,6 +602,34 @@ video {
   top: 2rem;
 }
 
+.right-10 {
+  right: 2.5rem;
+}
+
+.right-44 {
+  right: 11rem;
+}
+
+.right-32 {
+  right: 8rem;
+}
+
+.right-56 {
+  right: 14rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.right-40 {
+  right: 10rem;
+}
+
+.right-36 {
+  right: 9rem;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -791,6 +819,14 @@ video {
   margin-top: 2.25rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -928,6 +964,10 @@ video {
   width: 100%;
 }
 
+.w-5\/6 {
+  width: 83.333333%;
+}
+
 .flex-none {
   flex: none;
 }
@@ -994,6 +1034,10 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -1174,6 +1218,10 @@ video {
   padding-top: 13rem;
 }
 
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -1206,6 +1254,11 @@ video {
 .text-8xl {
   font-size: 6rem;
   line-height: 1;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
