homeページにフォントのリンクを追加した

--- a/frontend/src/css/user/home.css
+++ b/frontend/src/css/user/home.css
@@ -1165,6 +1165,10 @@ video {
   text-align: center;
 }
 
+.font-kiwi-maru {
+  font-family: "Kiwi Maru", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
