--- a/frontend/src/css/user/home.css
+++ b/frontend/src/css/user/home.css
@@ -923,6 +923,22 @@ video {
   height: 100vh;
 }
 
+.h-2\/5 {
+  height: 40%;
+}
+
+.h-3\/5 {
+  height: 60%;
+}
+
+.h-4\/5 {
+  height: 80%;
+}
+
+.h-1\/5 {
+  height: 20%;
+}
+
 .w-11\/12 {
   width: 91.666667%;
 }
