--- a/frontend/src/css/hamburger_menu.css
+++ b/frontend/src/css/hamburger_menu.css
@@ -161,3 +161,6 @@ button {
         .bg-customerized-pink {
             background-color: #FFCCC0;
         }
+        .material-icons {
+            font-size: 80px; 
+        }
