material-iconにheaderのみ適用されるよう修正

--- a/frontend/src/css/hamburger_menu.css
+++ b/frontend/src/css/hamburger_menu.css
@@ -161,6 +161,6 @@ button {
         .bg-customerized-pink {
             background-color: #FFCCC0;
         }
-        .material-icons {
+        header .material-icons {
             font-size: 80px; 
         }
